# lio-tutorial

./: .gitignore  .gitmodules  agenda.txt  exercises.hs  iorock.hs  liorock.hs  liorock.old.hs  ll-examples.cabal
day1slides/: .gitignore  day1.md  removed
day1slides/pandoc/slidy/styles/: slidy.css
day2slides/: .gitignore  GNUmakefile  day2.md
hailsslides/: hails.md
hailsslides/examples/: MyWebApp.hs
haskell-intro/: GNUmakefile  haskell-intro.md
liorock/: NetLib.hs  Play.hs  RockLib.hs  liorock.hs
liorock-buildup/: Makefile  NetLib.hs  liorock  liorock.hs
